--- a/notebooks/AllocationCategoriesScraper.ipynb
+++ b/notebooks/AllocationCategoriesScraper.ipynb
@@ -5,7 +5,19 @@
    "execution_count": 1,
    "id": "3496e4ae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bs4'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/audreyleung/Documents/GitHub/School-Budget-and-Allocations/notebooks/AllocationCategoriesScraper.ipynb Cell 1\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/audreyleung/Documents/GitHub/School-Budget-and-Allocations/notebooks/AllocationCategoriesScraper.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mbs4\u001b[39;00m \u001b[39mimport\u001b[39;00m BeautifulSoup, NavigableString, Tag\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/audreyleung/Documents/GitHub/School-Budget-and-Allocations/notebooks/AllocationCategoriesScraper.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/audreyleung/Documents/GitHub/School-Budget-and-Allocations/notebooks/AllocationCategoriesScraper.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mrequests\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'bs4'"
+     ]
+    }
+   ],
    "source": [
     "from bs4 import BeautifulSoup, NavigableString, Tag\n",
     "import pandas as pd\n",
@@ -2567,7 +2579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.6"
   },
   "toc": {
    "base_numbering": 1,
